# homelab

./: .gitignore  CLAUDE.md  README.md  cmd.py  deploy.py  inventory.py  pyproject.toml  renovate.json
.forgejo/workflows/: renovate.yml
commands/: README.md  db.py  oidc.py  onepassword.py  secrets.py  source_edit.py
deploys/common/debian/: __init__.py
deploys/common/docker_compose/: __init__.py  models.py
deploys/common/node_exporter/: __init__.py
deploys/common/users/: __init__.py
deploys/dns/: __init__.py  apps.py  secrets.py  vars.py
deploys/dns/templates/: ADMIN_PASSWORD.j2  (+2 more)
deploys/docker_compose/: models.py
deploys/docker_vm/: __init__.py
deploys/nas/: __init__.py
deploys/pbs_vm/: __init__.py
deploys/postgres_lxc/: __init__.py
deploys/proxmox_host/: __init__.py
docs/plans/: .caddy-proxies-migration.md.swp  any-sync-bundle.md  apps-to-try.md  caddy-proxies-migration.md  cwa-migration.md  docker-apps-migration.md  forgejo-migration.md  monitoring-migration.md  open-todos.md  paperless-migration.md  postgres-18-upgrade.md  renovate-forgejo-actions.md  shelfmark.md  technitium-dns.md
facts/: iscsi.py  proxmox.py  synology.py
facts/proxmox/: pbs.py  pve.py
group_data/: all.py  docker_vm.py  nas.py  pbs_vm.py  postgres_lxc.py  proxmox_host.py
models/: __init__.py  docker.py  iscsi.py  proxmox.py
op_secrets/: __init__.py
operations/: iscsi.py  proxmox.py  synology.py
operations/proxmox/: pbs.py  pve.py
tests/: test_facts.py  test_operations.py
tests/facts/: test_proxmox.py
tests/operations/: test_proxmox.py
utils/: variables.py
(+222 files in other folders)
