[project]
name = "homelab"
version = "0.1.0"
description = ""
authors = [
    {name = "Daan Debie", email = "daan@dv.email"},
]
requires-python = "<4.0,>=3.13"
dependencies = [
    "cyclopts<4.0.0,>=3.22.5",
    "ansible-vault<5.0.0,>=4.1.0",
    "ruamel-yaml<1.0.0,>=0.18.15",
    "pyinfra",
    "onepassword-sdk>=0.3.1",
    "libpass>=1.9.1.post0",
]
[tool.uv.sources]
# pyinfra = { git = "https://github.com/DonDebonair/pyinfra", branch = "feat/docker-network-aux-addresses" }
pyinfra = { path = "/Users/daan/code/pyinfra", editable = true }

