[project]
name = "homelab"
version = "0.1.0"
description = ""
authors = [
    {name = "Daan Debie", email = "daan@dv.email"},
]
requires-python = "<4.0,>=3.13"
dependencies = [
    "cyclopts<4.0.0",
    "ansible-vault<5.0.0,>=4.1.0",
    "ruamel-yaml<1.0.0,>=0.18.15",
    "pyinfra<4,>=3.5",
    "onepassword-sdk>=0.3.1",
    "libpass>=1.9.1.post0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

